#3380 fix default cidr, table text alignment

--- a/src/app/security-group/sg-rules/sg-rules.component.scss
+++ b/src/app/security-group/sg-rules/sg-rules.component.scss
@@ -6,7 +6,7 @@
 mdl-textfield {
   /deep/ .mdl-textfield__input,
   /deep/ .mdl-textfield__label {
-    text-align: right;
+    text-align: left;
   }
 
   &.cidr {
